[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "marine-eov-broker"
version = "1.0.0" 
description = "Broker for Marine Essential Ocean Variables will help you gather data from multiple Marine RI data servers." 
dependencies = [
  'pandas >= 1.3.4',
  'requests >= 2.26.0',
  'shapely >= 1.8.0',
  'sparqlwrapper >= 1.8.5',
  'xarray >= 0.20.1',
]
